--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.dash-de{
+  text-align: center;
+  align-items: center;
+}
+
 #main{
   display: flex;
   flex-direction: column;
@@ -13,10 +18,17 @@
 
 .profile{
   align-items: center;
-  color:blueviolet;
+  color:rgb(31, 114, 14);
   text-align: center;
-  background-color: rgb(233, 213, 232);
   padding-bottom: 20%;
+}
+.detail1{
+  background-color: rgb(233, 213, 232);
+  color: blue;
+}
+
+.profile button{
+  margin-top: 30%;
 }
 
 .profile h2{
@@ -25,4 +37,6 @@
   font-weight: bold;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+
 
